--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.28.2",
     "stream-chat": "^8.57.6",
     "stream-chat-react": "^12.13.1",
+    "supports-preserve-symlinks-flag": "^1.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
